# python-basic-homeworks

./: .gitignore  .pylintrc  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: django_tests.yml  pylint.yml  run_tests.yml
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: Dockerfile  docker-compose.yaml
homework_06/app/: app.py  config.py  main.py  prestart.sh  request_test_users.py
homework_06/app/migrations/versions/: 300bc24efed6_create_users_table_v2.py  67661f333b8f_create_users_table.py  c492f7fa7eac_drop_base_create_users.py  c8f54f06bf49_add_new_columns_to_users.py  fb24142b5a2d_update_datatypes_columns_in_users.py
homework_06/app/models/: __init__.py  base.py  users.py
homework_06/app/templates/: base.html  index.html
homework_06/app/templates/users/: add.html  details.html  list.html
homework_06/app/views/: users.py
homework_06/app/views/forms/: users.py
homework_07/users/templates/: base.html
homework_07/users/users/: settings.py  urls.py
homework_07/users/usersapp/: admin.py  models.py  test_views.py  tests.py  views.py
homework_07/users/usersapp/management/commands/: fill_db.py
homework_07/users/usersapp/migrations/: 0001_initial.py  0002_post.py
homework_07/users/usersapp/templates/usersapp/: index.html  post_list.html  user_detail.html  (+1 more)
